<resources>
    <string name="app_name">GlowOfOlympus</string>
    <string name="previous_meditation">Previous meditation</string>
    <string name="meditation">Meditation</string>
    <string name="press">PRESS</string>
    <string name="pick_a_meditation_playlist">Pick a meditation playlist</string>
    <string name="welcome_to_glow_of_olympus">Welcome to Glow of Olympus</string>
    <string name="let_s_relax">Let’s relax</string>
    <string name="ai_driven_meditations_and_affirmations_from_ancient_greece">AI-Driven Meditations and Affirmations from Ancient Greece</string>
    <string name="leaving_meditation_early">Leaving meditation early?</string>
    <string name="just_do_one_step_at_a_time_but_do_it_each_day_remember_little_strokes_fell_great_oaks">Just do one step at a time, but do it each day. Remember, little strokes fell great oaks.</string>
    <string name="yes_exit_to_the_menu">YES, exit to the menu</string>
    <string name="no_to_continue_meditating">NO, to continue meditating</string>
    <string name="duration_of_the_meditation">Duration of the meditation</string>
    <string name="all">All</string>
    <string name="favorite">Favorite</string>
    <string name="set_the_duration">Set the duration</string>
    <string name="_00_00">00:00</string>
    <string name="save">Save</string>
    <string name="playing_now">Playing now</string>
    <string name="textview">TextView</string>
    <string name="you_re_winner">YOU’RE WINNER!</string>
    <string name="today_you_are_one_step_closer_to_your_goal">Today you are one step closer to your goal!</string>
    <string name="view_your_achievements">View your achievements</string>
    <string name="go_to_menu">Go to menu</string>
    <string name="title_card_1">Olympian Whispers</string>
    <string name="description_card_1">Echoes of ancient lands merge in harmonious symphony</string>
    <string name="title_card_2">Aphrodite\'s Lullaby</string>
    <string name="description_card_2">Sacred waves kiss her birthstone, singing love</string>
    <string name="title_card_3">Caledonia\'s Chorus</string>
    <string name="description_card_3">Ancient waters cascade, echoing time\'s embrace</string>
    <string name="title_card_4">Hellenic Hamlet Hush</string>
    <string name="description_card_4">Quaint village whispers, Greece\'s timeless soul stirs</string>
    <string name="title_card_5">Olympian Breeze</string>
    <string name="description_card_5">Chill mountain winds sing tales of gods</string>
    <string name="title_card_6">Mountain Tranquility</string>
    <string name="description_card_6">Serene heights whisper, peace touches Olympus</string>
    <string name="title_card_7">Olympian Aria</string>
    <string name="description_card_7">Rare mountain zephyrs sing nature\'s elusive hymn</string>
    <string name="title_card_8">Acheron\'s Murmur</string>
    <string name="description_card_8">Mountain streams whisper, echoing ancient myths</string>
    <string name="title_card_9">Demeter\'s Tears</string>
    <string name="description_card_9">Gentle raindrops whisper, nature\'s soft embracey</string>
    <string name="title_card_10">Zeus\'s Symphony</string>
    <string name="description_card_10">Thunder roars, winds howl, rain dances divine</string>
    <string name="title_card_11">Orpheus\'s Melody</string>
    <string name="description_card_11">Ancient harp strings evoke timeless Grecian tales</string>
    <string name="title_card_12">Promethean Flame</string>
    <string name="description_card_12">Crackling torches, mankind\'s age-old, gifted light</string>
    <string name="title_card_13">Elysian Steps</string>
    <string name="description_card_13">Heavenly footfalls, celestial paradise beckons</string>
    <string name="title_card_14">Neptune\'s Lullaby</string>
    <string name="description_card_14">Deep sea\'s eternal pulse, oceanic dreams looped</string>
    <string name="title_card_15">Kurai Serenade</string>
    <string name="description_card_15">Soulful melodies, ancient winds whisper tales</string>

</resources>