<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ED472A4E"
    tools:context=".ui.leaving.LeavingFragment">


    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_purple_pop_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnExitLeaving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:src="@drawable/icon_button_exit"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/leaving_meditation_early"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/btnExitLeaving" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/just_do_one_step_at_a_time_but_do_it_each_day_remember_little_strokes_fell_great_oaks"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/yes_exit_to_the_menu"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnYesLeaving"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/btnYesLeaving" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/no_to_continue_meditating"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnNoLeaving"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/btnNoLeaving" />

    <ImageView
        android:id="@+id/btnNoLeaving"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_purple_button"
        app:layout_constraintBottom_toTopOf="@+id/btnYesLeaving"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/btnYesLeaving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:src="@drawable/icon_button_white_line"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="@+id/btnNoLeaving"
        app:layout_constraintStart_toStartOf="@+id/btnNoLeaving" />
</androidx.constraintlayout.widget.ConstraintLayout>