<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3FFFCE7"
    tools:context=".ui.meditation_timer.MeditationTimerFragment">


    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_purple_pop_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnExitTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:src="@drawable/icon_button_exit"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/duration_of_the_meditation"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/btnExitTimer" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/set_the_duration"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/_00_00"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnTime"
        app:layout_constraintEnd_toEndOf="@+id/btnTime"
        app:layout_constraintStart_toStartOf="@+id/btnTime"
        app:layout_constraintTop_toTopOf="@+id/btnTime" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="@+id/btnSave"
        app:layout_constraintTop_toTopOf="@+id/btnSave" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/icon_line"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <ImageView
        android:id="@+id/btnTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_time"
        app:layout_constraintBottom_toBottomOf="@+id/textView24"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="@+id/textView24" />

    <ImageView
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/icon_purple_button"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toStartOf="@+id/numberPicker2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/imageView18" />

    <NumberPicker
        android:id="@+id/numberPicker2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/numberPicker"
        app:layout_constraintTop_toBottomOf="@+id/imageView18" />
</androidx.constraintlayout.widget.ConstraintLayout>