<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_olympia"
    tools:context=".ui.meditation.MeditationFragment">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/duration_of_the_meditation"
        android:textColor="@color/purple"
        android:textSize="12sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10" />

    <TextView
        android:id="@+id/tvTimeMediation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="-:-"
        android:textColor="@color/purple"
        android:textSize="32sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/meditation"
        android:textColor="@color/purple"
        android:textSize="21sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/icon_background_meditation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_background_top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-35dp"
        android:src="@drawable/icon_white_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/btnAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:src="@drawable/icon_white_true_button"
        app:layout_constraintEnd_toStartOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/btnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_white_true_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/btnAll" />

    <ImageView
        android:id="@+id/btnChangeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:src="@drawable/icon_pensil"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAll"
        app:layout_constraintEnd_toEndOf="@+id/btnAll"
        app:layout_constraintStart_toStartOf="@+id/btnAll"
        app:layout_constraintTop_toTopOf="@+id/btnAll" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAll"
        app:layout_constraintEnd_toEndOf="@+id/btnFavorite"
        app:layout_constraintStart_toStartOf="@+id/btnFavorite"
        app:layout_constraintTop_toTopOf="@+id/btnAll" />

    <ImageView
        android:id="@+id/btnBackMeditation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/icon_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCards"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeTime" />
</androidx.constraintlayout.widget.ConstraintLayout>